# ensurer-v2

./: .gitignore  Cargo.toml  cliff.toml  justfile
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
config/: runsd.toml
crates/common/: Cargo.toml
crates/common/src/: error.rs  event.rs  idempotency.rs  lib.rs  model.rs  types.rs
crates/runs/: Cargo.toml
crates/runs/src/: app.rs  config.rs  lib.rs  main.rs  network.rs  ui.rs
crates/runs/src/app/: keybindings.rs  msg.rs  state.rs  update.rs
crates/runs/src/network/: sse.rs  unix_client.rs
crates/runs/src/ui/: colors.rs  overlays.rs  screens.rs
crates/runs/src/ui/overlays/: command.rs  confirm.rs  filter.rs  help.rs
crates/runs/src/ui/screens/: calc_detail.rs  dashboard.rs  run_detail.rs  run_list.rs
crates/runsd/: Cargo.toml
crates/runsd/migrations/: 0001_initial.sql
crates/runsd/src/: actor.rs  api.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
crates/runsd/src/actor/: calc.rs  db.rs  event_bus.rs  run.rs  supervisor.rs  watchdog.rs  worker_pool.rs
crates/runsd/src/api/: error.rs  graphql.rs  handlers.rs  routes.rs  sse.rs  state.rs
crates/runsd/src/db/: queries.rs  row.rs
docs/: configuration.md  external-api.md
scripts/: setup-hooks.sh
