[package]
name    = "runs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "runs"
path = "src/main.rs"

[dependencies]
common      = { path = "../common" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
hyper           = { workspace = true }
hyper-util      = { workspace = true }
http-body-util  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
figment     = { workspace = true }
clap        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
ratatui     = { workspace = true }
crossterm   = { workspace = true }
futures     = { workspace = true }
futures-util = { workspace = true }
bytes       = { workspace = true }
clap_complete    = { workspace = true }
toml             = { workspace = true }
tracing-appender = { workspace = true }
