[package]
name    = "runsd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "runsd"
path = "src/main.rs"

[dependencies]
common      = { path = "../common" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
hyper       = { workspace = true }
hyper-util  = { workspace = true }
tokio-util  = { workspace = true }
reqwest     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
figment     = { workspace = true }
clap        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
metrics     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
futures     = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
bytes       = { workspace = true }
rand        = { workspace = true }
toml        = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
clap_complete      = { workspace = true }
async-graphql      = { workspace = true }
async-graphql-axum = { workspace = true }
